add registration and login

--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -8,4 +8,5 @@
     <input formControlName="password" type="text">
     <button class="registration-button" (click)="registration()">Sign up</button>
   </form>
+  <button class="registration-button" [routerLink]="[ '/login' ]">Log in</button>
 </div>
