--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,11 +1,19 @@
-.login {
+.form-container {
   min-width: 200px;
   max-width: 500px;
   margin: 0 auto;
   display: flex;
-  flex-direction: column
+  flex-direction: column;
+  text-align: center;
+}
+
+.buttons-container {
+  display: flex;
+  justify-content: center;
 }
 
 .login-button {
-  margin-top: 20px;
+  margin: 20px;
+  height: 30px;
+  width: 100px;
 }
