--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -1,12 +1,21 @@
 <div>
-  <form class="registration" [formGroup]="registrationForm">
+  <form class="form-container" [formGroup]="registrationForm">
     <p>Enter username:</p>
-    <input formControlName="username" type="text">
+    <label>
+      <input formControlName="username" type="text">
+    </label>
     <p>Enter email:</p>
-    <input formControlName="email" type="text">
+    <label>
+      <input formControlName="email" type="text">
+    </label>
     <p>Password:</p>
-    <input formControlName="password" type="text">
-    <button class="registration-button" (click)="registration()">Sign up</button>
+    <label>
+      <input formControlName="password" type="text">
+    </label>
+    <p *ngIf="registrationError">{{registrationError.error}}</p>
   </form>
-  <button class="registration-button" [routerLink]="[ '/login' ]">Log in</button>
+  <div class="buttons-container">
+    <button class="registration-button" (click)="registration()">Sign up</button>
+    <button class="registration-button" [routerLink]="[ '/login' ]">Log in</button>
+  </div>
 </div>
