--- a/src/app/main/components/feed/feed.component.html
+++ b/src/app/main/components/feed/feed.component.html
@@ -1,1 +1,4 @@
-<div class="post" *ngFor="let post of posts">{{post.body}}</div>
+<div class="post" *ngFor="let post of posts">
+  {{post.body}}
+  <img src="{{post.image}}" alt="postImage">
+</div>
