--- a/src/app/main/components/nav/nav.component.html
+++ b/src/app/main/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="nav-container">
   <div [routerLink]="[ '' ]">Margatsni</div>
   <div [routerLink]="[ '/post-create' ]">Create Post!</div>
-  <div [routerLink]="[ '/profile' ]">Profile</div>
+  <div [routerLink]="[ '/profile/', userUrl ]">Profile</div>
   <button (click)="logout()">logout</button>
 </div>
