add local-storage service and some feed styles

--- a/src/app/main/components/feed/feed.component.css
+++ b/src/app/main/components/feed/feed.component.css
@@ -1,3 +1,28 @@
+.post-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .post {
-  margin: 20px;
+  margin: 10px auto;
+  border: 1px solid #C0C0C0;
+}
+
+.post-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.post-info-container {
+  display: flex;
+}
+
+.post-owner {
+  font-weight: bold;
+}
+
+.post-description {
+  margin-left: 10px;
+  text-align: center;
 }
