--- a/src/app/main/components/feed/feed.component.html
+++ b/src/app/main/components/feed/feed.component.html
@@ -1,4 +1,9 @@
-<div class="post" *ngFor="let post of posts">
-  {{post.body}}
-  <img src="{{post.image}}" alt="postImage">
+<div class="post-container">
+  <div class="post" *ngFor="let post of posts">
+    <img class="post-image" src="{{post.image}}" alt="postImage">
+    <div class="post-info-container">
+      <p class="post-owner">{{post.user.username}}</p>
+      <p class="post-description">{{post.body}}</p>
+    </div>
+  </div>
 </div>
