--- a/src/app/auth/registration/registration.component.css
+++ b/src/app/auth/registration/registration.component.css
@@ -7,6 +7,10 @@
   text-align: center;
 }
 
+.input {
+  margin: 20px;
+}
+
 .buttons-container {
   display: flex;
   justify-content: center;
@@ -14,6 +18,4 @@
 
 .registration-button {
   margin: 20px;
-  height: 30px;
-  width: 100px;
 }
