--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -1,21 +1,24 @@
 <div>
   <form class="form-container" [formGroup]="registrationForm">
-    <p>Enter username:</p>
-    <label>
-      <input formControlName="username" type="text">
-    </label>
-    <p>Enter email:</p>
-    <label>
-      <input formControlName="email" type="text">
-    </label>
-    <p>Password:</p>
-    <label>
-      <input formControlName="password" type="text">
-    </label>
+    <mat-form-field class="input">
+      <label>
+        <input matInput formControlName="username" placeholder="Enter username:">
+      </label>
+    </mat-form-field>
+    <mat-form-field class="input">
+      <label>
+        <input matInput formControlName="email" placeholder="Enter email">
+      </label>
+    </mat-form-field>
+    <mat-form-field class="input">
+      <label>
+        <input matInput formControlName="password" placeholder="Enter password">
+      </label>
+    </mat-form-field>
     <p *ngIf="registrationError">{{registrationError.error}}</p>
   </form>
   <div class="buttons-container">
-    <button class="registration-button" (click)="registration()">Sign up</button>
-    <button class="registration-button" [routerLink]="[ '/login' ]">Log in</button>
+    <button class="registration-button" mat-raised-button color="primary" (click)="registration()">Sign up</button>
+    <button class="registration-button" mat-raised-button color="primary" [routerLink]="[ '/login' ]">Log in</button>
   </div>
 </div>
