--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
     </mat-form-field>
     <mat-form-field class="input">
       <label>
-        <input matInput formControlName="password" placeholder="Enter password">
+        <input matInput type="password" formControlName="password" placeholder="Enter password">
       </label>
     </mat-form-field>
     <p *ngIf="loginError">{{loginError.error}}</p>
