--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,19 +1,36 @@
-<div>
-  <form class="form-container" [formGroup]="loginForm">
-    <mat-form-field class="input">
-      <label>
-        <input matInput formControlName="email" placeholder="Enter the email">
-      </label>
-    </mat-form-field>
-    <mat-form-field class="input">
-      <label>
-        <input matInput type="password" formControlName="password" placeholder="Enter password">
-      </label>
-    </mat-form-field>
-    <p *ngIf="loginError">{{loginError.error}}</p>
-  </form>
-  <div class="buttons-container">
-    <button class="login-button" mat-raised-button color="primary" (click)="login()">Log in</button>
-    <button class="login-button" mat-raised-button color="primary" [routerLink]="[ '/registration' ]">Sign in</button>
+<div class="login-container">
+  <div class="welcome-message">
+    <h1>Margatsni</h1>
+    <p>Log in to see photos and videos from your friends.</p>
+  </div>
+  <div>
+    <form class="form-container" [formGroup]="loginForm">
+      <mat-form-field class="input">
+        <label>
+          <input matInput formControlName="email" placeholder="Enter the email">
+        </label>
+        <mat-error *ngIf="loginForm.invalid && loginForm.touched">Enter please correct email!</mat-error>
+      </mat-form-field>
+      <mat-form-field class="input">
+        <label>
+          <input matInput type="password" formControlName="password" placeholder="Enter password">
+        </label>
+        <mat-error *ngIf="loginForm.invalid && loginForm.touched">Password can't be empty!</mat-error>
+      </mat-form-field>
+      <p *ngIf="loginError">{{loginError.error}}</p>
+    </form>
+    <div class="buttons-container">
+      <button class="login-button" mat-raised-button color="primary" [disabled]="!loginForm.valid" (click)="login()">Log in</button>
+    </div>
   </div>
 </div>
+
+  <div class="question-container">
+    <p class="question-message">Don't have an account?</p>
+    <div class="buttons-container">
+      <button class="login-button" mat-raised-button color="primary" [routerLink]="[ '/registration' ]">Sign in</button>
+    </div>
+  </div>
+
+
+
