--- a/src/app/auth/registration/registration.component.css
+++ b/src/app/auth/registration/registration.component.css
@@ -1,3 +1,13 @@
+.registration-container {
+  background-color: #ffff;
+  margin: 20px auto;
+  border: 1px #C0C0C0 solid;
+}
+
+.welcome-message {
+  text-align: center;
+}
+
 .form-container {
   min-width: 200px;
   max-width: 500px;
@@ -18,4 +28,38 @@
 
 .registration-button {
   margin: 20px;
+  width: 400px;
+  height: 50px;
+}
+
+.question-container {
+  background-color: #ffff;
+  margin: 20px auto;
+  border: 1px #C0C0C0 solid;
+}
+
+.question-message {
+  text-align: center;
+}
+
+@media screen and (min-width: 576px) {
+  .registration-container {
+    width: 550px;
+  }
+
+  .question-container {
+    width: 550px;
+  }
+
+  .registration-button {
+    width: 470px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+
+}
+
+@media screen and (min-width: 992px) {
+
 }
