--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 body {
+  background-color: #F5F5F5;
   margin: 0;
   padding: 0;
 }
