add nav icons, moved logout to profile and fix feed posts

--- a/src/app/main/components/profile/profile.component.html
+++ b/src/app/main/components/profile/profile.component.html
@@ -1,3 +1,4 @@
 <p>{{userInfo.username}}</p>
 <p>{{userInfo.bio}}</p>
 <button [routerLink]="[ '/edit-profile' ]">Edit profile</button>
+<button (click)="logout()">logout</button>
