--- a/src/app/main/components/feed/feed.component.css
+++ b/src/app/main/components/feed/feed.component.css
@@ -10,6 +10,7 @@
 .post {
   margin: 10px auto;
   border: 1px solid #C0C0C0;
+  width: 500px;
 }
 
 .post-image {
@@ -29,4 +30,10 @@
 .post-description {
   margin-left: 10px;
   text-align: center;
+}
+
+@media screen and (max-width: 576px) {
+  .post {
+    width: 320px;
+  }
 }
