--- a/src/app/main/components/nav/nav.component.html
+++ b/src/app/main/components/nav/nav.component.html
@@ -1,6 +1,5 @@
 <div class="nav-container">
-  <div [routerLink]="[ '' ]">Margatsni</div>
-  <div [routerLink]="[ '/post-create' ]">Create Post!</div>
-  <div [routerLink]="[ '/profile/', userUrl ]">Profile</div>
-  <button (click)="logout()">logout</button>
+  <div class="nav-item" [routerLink]="[ '' ]">Margatsni</div>
+  <img src="../../../../assets/images/camera.png" class="nav-profile-icon" [routerLink]="[ '/post-create' ]" alt="camera">
+  <img src="../../../../assets/images/profile.png" class="nav-profile-icon" [routerLink]="[ '/profile/', userUrl ]" alt="profile">
 </div>
