--- a/src/app/main/components/profile/profile.component.html
+++ b/src/app/main/components/profile/profile.component.html
@@ -1,4 +1,4 @@
-<p>{{userInfo.username}}</p>
-<p>{{userInfo.bio}}</p>
+<p>{{username}}</p>
+<p>{{bio}}</p>
 <button [routerLink]="[ '/edit-profile' ]">Edit profile</button>
 <button (click)="logout()">logout</button>
