--- a/src/app/main/components/feed/feed.component.html
+++ b/src/app/main/components/feed/feed.component.html
@@ -1,5 +1,5 @@
 <div class="post-container">
-  <mat-spinner class="spinner" *ngIf="!posts[0]"></mat-spinner>
+  <mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
   <div class="post" *ngFor="let post of posts">
     <img class="post-image" src="{{post.image}}" alt="postImage">
     <div class="post-info-container">
