--- a/src/app/main/components/feed/feed.component.css
+++ b/src/app/main/components/feed/feed.component.css
@@ -8,9 +8,10 @@
 }
 
 .post {
-  margin: 10px auto;
+  margin: 20px auto;
   border: 1px solid #C0C0C0;
   width: 500px;
+  background-color: #ffff;
 }
 
 .post-image {
