--- a/src/app/main/components/feed/feed.component.html
+++ b/src/app/main/components/feed/feed.component.html
@@ -1,6 +1,7 @@
 <div class="post-container">
   <mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
   <div class="post" *ngFor="let post of posts">
+    <p class="post-owner">{{post.user.username}}</p>
     <img class="post-image" src="{{post.image}}" alt="postImage">
     <div class="post-info-container">
       <p class="post-owner">{{post.user.username}}</p>
@@ -9,7 +10,7 @@
   </div>
   <div
     infiniteScroll
-    [infiniteScrollDistance]="1"
+    [infiniteScrollDistance]="2"
     [infiniteScrollThrottle]="1000"
     (scrolled)="onScroll()">
   </div>
