add search and profile components

--- a/src/app/main/components/nav/nav.component.html
+++ b/src/app/main/components/nav/nav.component.html
@@ -1,5 +1,6 @@
 <div class="nav-container">
   <div class="nav-item" [routerLink]="[ '' ]">Margatsni</div>
+  <app-search></app-search>
   <img src="../../../../assets/images/camera.png" class="nav-profile-icon" [routerLink]="[ '/post-create' ]" alt="camera">
-  <img src="../../../../assets/images/profile.png" class="nav-profile-icon" [routerLink]="[ '/profile/', userUrl ]" alt="profile">
+  <img src="../../../../assets/images/profile.png" class="nav-profile-icon" [routerLink]="[ '/user-profile/', userUrl ]" alt="profile">
 </div>
