--- a/src/app/main/components/profile/profile.component.html
+++ b/src/app/main/components/profile/profile.component.html
@@ -1,3 +1,4 @@
+<mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
 <div class="post" *ngFor="let post of posts">
   <img class="post-image" src="{{post.image}}" alt="postImage">
 </div>
