fix route to edit-profile component and create another method to reload profile

--- a/src/app/main/components/user-profile/user-profile.component.html
+++ b/src/app/main/components/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
 <p>{{username}}</p>
 <p>{{bio}}</p>
-<button [routerLink]="[ '/edit-user-user-profile' ]">Edit profile</button>
+<button [routerLink]="[ '/edit-profile' ]">Edit profile</button>
 <button (click)="logout()">logout</button>
 <mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
 <div class="post" *ngFor="let post of posts">
