add user avatar, deleting posts,

--- a/src/app/main/components/search/search.component.html
+++ b/src/app/main/components/search/search.component.html
@@ -1,3 +1,5 @@
 <form (ngSubmit)="searchUser()">
-    <input type="text" [formControl]="searchForm" >
+    <label>
+      <input type="text" [formControl]="searchForm" placeholder="Search">
+    </label>
 </form>
