--- a/src/app/main/components/user-post-edit/user-post-edit.component.html
+++ b/src/app/main/components/user-post-edit/user-post-edit.component.html
@@ -1,3 +1,3 @@
 <img src="{{postImage}}" alt="postImage">
 <p>{{postDescription}}</p>
-<button (click)="deletePost()">delete post</button>
+<button (click)="deletePost()" [routerLink]="[ '/user-profile/' , userUrl ]">delete post</button>
