add redirect on profile edit component

--- a/src/app/main/components/user-profile-edit/user-profile-edit.component.html
+++ b/src/app/main/components/user-profile-edit/user-profile-edit.component.html
@@ -13,6 +13,6 @@
     <label>
       <input formControlName="bio" value="{{bio}}">
     </label>
-    <button (click)="updateProfileInfo()">Submit</button>
+    <button (click)="updateProfileInfo()" [routerLink]="[ '/user-profile/' , userUrl ]">Submit</button>
   </form>
 </div>
