--- a/src/app/main/components/user-profile/user-profile.component.css
+++ b/src/app/main/components/user-profile/user-profile.component.css
@@ -12,11 +12,16 @@
 
 .post {
   width: 300px;
+  height: 300px;
   margin: 10px;
+  position: relative;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
 }
 
 .post-image {
   width: 100%;
-  height: 100%;
   object-fit: cover;
+  align-self: center;
 }
