--- a/src/app/main/components/user-profile/user-profile.component.html
+++ b/src/app/main/components/user-profile/user-profile.component.html
@@ -6,9 +6,11 @@
   <button (click)="logout()">logout</button>
   <mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
   <div class="post-container">
-    <div class="post" *ngFor="let post of posts">
-      <img class="post-image" (click)="editPost(post.id)" [routerLink]="[ '/edit-post' ]" src="{{post.image}}" alt="postImage">
-      <p>{{post.body}}</p>
+    <div class="post"
+         [ngStyle]="{'background-image': 'url(' + post.image + ')'}"
+         (click)="editPost(post.id)"
+         [routerLink]="[ '/edit-post' ]"
+         *ngFor="let post of posts">
     </div>
   </div>
   <div
