add interfaces and create comment without reloading page

--- a/src/app/main/components/user-profile-edit/user-profile-edit.component.css
+++ b/src/app/main/components/user-profile-edit/user-profile-edit.component.css
@@ -11,6 +11,10 @@
 .profile-edit-form-container {
 }
 
+.user-avatar {
+  width: 100px;
+}
+
 @media screen and (min-width: 576px) {
   .profile-edit-container {
     width: 550px;
