--- a/src/app/main/components/feed/feed.component.html
+++ b/src/app/main/components/feed/feed.component.html
@@ -2,7 +2,7 @@
   <mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
   <div class="post" *ngFor="let post of posts">
     <p class="post-owner">{{post.user.username}}</p>
-    <img class="post-image" src="{{post.image}}" alt="postImage">
+    <img class="post-image" src="{{post.image}}" alt="postImage" (click)="postReview(post.id)" [routerLink]=" [ '/post-review' ]">
     <div class="post-info-container" *ngIf="post.body">
       <p class="post-owner">{{post.user.username}}</p>
       <p class="post-description">{{post.body}}</p>
