--- a/src/app/main/components/feed/feed.component.css
+++ b/src/app/main/components/feed/feed.component.css
@@ -24,6 +24,17 @@
   display: flex;
 }
 
+.post-owner-container {
+  display: flex;
+}
+
+.post-owner-avatar {
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+  border-radius: 50%;
+}
+
 .post-owner {
   font-weight: bold;
 }
@@ -31,6 +42,10 @@
 .post-description {
   margin-left: 10px;
   text-align: center;
+}
+
+.post-likes {
+  margin-left: 10px;
 }
 
 .post-comments {
