--- a/src/app/main/components/post-review/post-review.component.html
+++ b/src/app/main/components/post-review/post-review.component.html
@@ -1,9 +1,12 @@
-<div class="post">
+<div class="post-container">
   <p class="post-owner">{{postOwner}}</p>
   <img class="post-image" src="{{postImage}}" alt="postImage">
   <div class="post-info-container">
     <p class="post-owner">{{postOwner}}</p>
     <p class="post-description">{{postDescription}}</p>
+  </div>
+  <div>
+    <button>Like</button>
   </div>
   <div class="post-comments" *ngFor="let comment of comments">
     <p class="comment-owner">{{comment.user.username}}</p>
