--- a/src/app/main/components/profile/profile.component.html
+++ b/src/app/main/components/profile/profile.component.html
@@ -1,6 +1,11 @@
 <mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
 <div class="post" *ngFor="let post of posts">
   <img class="post-image" src="{{post.image}}" alt="postImage">
+  <div class="post-info-container" *ngIf="post.body">
+    <p class="post-owner">{{post.user.username}}</p>
+    <p class="post-description">{{post.body}}</p>
+    <p class="post-likes">{{post.likes_count}} likes</p>
+  </div>
 </div>
 <p *ngIf="errorMessage">{{errorMessage.error}}</p>
 <div
