--- a/src/app/main/components/user-profile-edit/user-profile-edit.component.html
+++ b/src/app/main/components/user-profile-edit/user-profile-edit.component.html
@@ -2,16 +2,20 @@
   <p class="profile-edit-username">{{username}}</p>
   <form class="profile-edit-form-container" [formGroup]="profileEditForm">
     <label>
-      <img class="user-avatar" src="{{userAvatar}}" alt="userAvatar">
-      <input type="file" formControlName="userAvatar">
+      <img class="user-avatar" src="{{userAvatar}}"  alt="userAvatar" >
+      <input type="file" formControlName="userAvatar" (change)="onImageSelected($event)">
+    </label>
+    <p>username:</p>
+    <label>
+      <input formControlName="username" value="{{username}}">
     </label>
     <p>email:</p>
     <label>
       <input formControlName="email" value="{{email}}">
     </label>
-    <p>username:</p>
+    <p>password:</p>
     <label>
-      <input formControlName="username" value="{{username}}">
+      <input type="password" formControlName="password">
     </label>
     <p>bio:</p>
     <label>
