--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -28,7 +28,7 @@
   <div class="question-container">
     <p class="question-message">Don't have an account?</p>
     <div class="buttons-container">
-      <button class="login-button" mat-raised-button color="primary" [routerLink]="[ '/registration' ]">Sign in</button>
+      <button class="login-button" mat-raised-button color="primary" [routerLink]="[ '/registration' ]">Sign up</button>
     </div>
   </div>
 
