--- a/src/app/main/components/profile/profile.component.html
+++ b/src/app/main/components/profile/profile.component.html
@@ -1,5 +1,8 @@
 <mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
-<div class="post" *ngFor="let post of posts">
+<img class="user-avatar" src="{{userAvatar}}" alt="postImage">
+<p>{{username}}</p>
+<p>{{bio}}</p>
+<div class="post-container" *ngFor="let post of posts">
   <img class="post-image" src="{{post.image}}" alt="postImage">
   <div class="post-info-container" *ngIf="post.body">
     <p class="post-owner">{{post.user.username}}</p>
