fix likes, upload image and profile component

--- a/src/app/main/components/create-post/create-post.component.html
+++ b/src/app/main/components/create-post/create-post.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="postForm">
   <label>
-    <input type="file" formControlName="createPostImage" (change)="onImageSelected($event)">
+    <input type="file" (change)="onImageSelected($event)">
   </label>
   <label>
     <input formControlName="createPostDescription">
