--- a/src/app/main/components/profile/profile.component.html
+++ b/src/app/main/components/profile/profile.component.html
@@ -1,19 +1,27 @@
 <mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
-<img class="user-avatar" src="{{userAvatar}}" alt="postImage">
-<p>{{username}}</p>
-<p>{{bio}}</p>
-<div class="post-container" *ngFor="let post of posts">
-  <img class="post-image" src="{{post.image}}" alt="postImage">
-  <div class="post-info-container" *ngIf="post.body">
-    <p class="post-owner">{{post.user.username}}</p>
-    <p class="post-description">{{post.body}}</p>
-    <p class="post-likes">{{post.likes_count}} likes</p>
+<div class="profile-container" *ngIf="!spinner">
+  <img *ngIf="!errorMessage" class="user-avatar" src="{{userAvatar}}" alt="postImage">
+  <p>{{username}}</p>
+  <p>{{bio}}</p>
+
+  <div *ngIf="!errorMessage">
+    <button *ngIf="subscribeStatus" (click)="subscribe(userId)">Subscribe</button>
+    <button *ngIf="!subscribeStatus" (click)="unsubscribe(userId)">UnSubscribe</button>
   </div>
-</div>
-<p *ngIf="errorMessage">{{errorMessage.error}}</p>
-<div
-  infiniteScroll
-  [infiniteScrollDistance]="2"
-  [infiniteScrollThrottle]="1000"
-  (scrolled)="onScroll()">
+
+  <div class="post-container" *ngFor="let post of posts">
+    <img class="post-image" src="{{post.image}}" alt="postImage">
+    <div class="post-info-container" *ngIf="post.body">
+      <p class="post-owner">{{post.user.username}}</p>
+      <p class="post-description">{{post.body}}</p>
+      <p class="post-likes">{{post.likes_count}} likes</p>
+    </div>
+  </div>
+  <p *ngIf="errorMessage">{{errorMessage.error}}</p>
+  <div
+    infiniteScroll
+    [infiniteScrollDistance]="2"
+    [infiniteScrollThrottle]="1000"
+    (scrolled)="onScroll()">
+  </div>
 </div>
