--- a/src/app/main/components/profile/profile.component.html
+++ b/src/app/main/components/profile/profile.component.html
@@ -9,6 +9,9 @@
     <button *ngIf="!subscribeStatus" (click)="unsubscribe(userId)">UnSubscribe</button>
   </div>
 
+  <button (click)="openFollowing()">Following</button>
+  <button (click)="openFollowers()">Followers</button>
+
   <div class="post-container" *ngFor="let post of posts">
     <img class="post-image" src="{{post.image}}" alt="postImage">
     <div class="post-info-container" *ngIf="post.body">
