--- a/src/app/main/components/post-review/post-review.component.html
+++ b/src/app/main/components/post-review/post-review.component.html
@@ -1,4 +1,5 @@
-<div class="post-container">
+<mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
+<div class="post-container" *ngIf="!spinner">
   <p class="post-owner">{{postOwner}}</p>
   <img class="post-image" src="{{postImage}}" alt="postImage">
   <div class="post-info-container">
