--- a/src/app/main/components/profile/profile.component.html
+++ b/src/app/main/components/profile/profile.component.html
@@ -13,7 +13,8 @@
   <button (click)="openFollowers()">Followers</button>
 
   <div class="post-container" *ngFor="let post of posts">
-    <img class="post-image" src="{{post.image}}" alt="postImage">
+    <img class="post-image" src="{{post.image}}" alt="postImage"
+         [routerLink]=" [ '/post-review/', post.id ]">
     <div class="post-info-container" *ngIf="post.body">
       <p class="post-owner">{{post.user.username}}</p>
       <p class="post-description">{{post.body}}</p>
