--- a/src/app/main/components/followers/followers.component.html
+++ b/src/app/main/components/followers/followers.component.html
@@ -1,9 +1,11 @@
 <p>followers:</p>
 <mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
 <div *ngIf="!spinner">
-  <div *ngFor="let follower of followers" (click)="closeDialog()" [routerLink]=" [ '/profile/', follower.username ]">
-    <p>{{follower.username}}</p>
-    <img class="user-avatar" [src]="follower.image || 'assets/images/default-avatar.jpg'" alt="userAvatar">
+  <div *ngFor="let follower of followers">
+    <div (click)="closeDialog()" [routerLink]=" [ '/profile/', follower.username ]">
+      <p>{{follower.username}}</p>
+      <img class="user-avatar" [src]="follower.image || 'assets/images/default-avatar.jpg'" alt="userAvatar">
+    </div>
   </div>
   <p *ngIf="!followers.length">No followers</p>
 </div>
