--- a/src/app/main/components/user-profile-edit/user-profile-edit.component.html
+++ b/src/app/main/components/user-profile-edit/user-profile-edit.component.html
@@ -1,4 +1,6 @@
-<div class="profile-edit-container">
+<mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
+
+<div class="profile-edit-container" *ngIf="!spinner">
   <p class="profile-edit-username">{{username}}</p>
   <form class="profile-edit-form-container" [formGroup]="profileEditForm">
     <label>
