--- a/src/app/main/components/feed/feed.component.css
+++ b/src/app/main/components/feed/feed.component.css
@@ -1,56 +1,70 @@
+.spinner {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+
 .post-container {
   display: flex;
   flex-direction: column;
-}
-
-.spinner {
-  margin: 0 auto;
-}
-
-.post-container {
   margin: 20px auto;
   border: 1px solid #C0C0C0;
   width: 500px;
-  background-color: #ffff;
-  border-radius: 1%;
 }
 
-.post-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.post-owner-container {
+  margin-bottom: 10px;
+}
+
+.likes-container {
+  padding: initial;
+  margin-bottom: initial;
+}
+
+.like-icon {
+  width: 30px;
+  height: 30px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.comment-icon {
+  width: 30px;
+  height: 30px;
+  margin-left: 15px;
+  cursor: pointer;
+}
+
+.post-likes {
+  font-weight: bold;
+  margin-left: 8px;
 }
 
 .post-info-container {
   display: flex;
-}
-
-.post-owner-container {
-  display: flex;
-}
-
-.post-owner-avatar {
-  width: 50px;
-  height: 50px;
-  margin: 10px;
-  border-radius: 50%;
+  font-size: initial;
+  margin: initial;
 }
 
 .post-owner {
   font-weight: bold;
+  margin-top: 7px;
+  cursor: pointer;
 }
 
 .post-description {
   margin-left: 10px;
   text-align: center;
-}
-
-.post-likes {
-  margin-left: 10px;
+  margin-bottom: initial;
+  margin-block-start: 0;
 }
 
 .post-comments {
   display: flex;
+  margin-top: 10px;
 }
 
 .comment-owner {
