--- a/src/app/main/components/profile/profile.component.css
+++ b/src/app/main/components/profile/profile.component.css
@@ -1,3 +1,12 @@
+.spinner {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+
 .user-avatar {
   width: 100px;
   height: 100px;
