--- a/src/app/main/components/user-post-edit/user-post-edit.component.css
+++ b/src/app/main/components/user-post-edit/user-post-edit.component.css
@@ -1,3 +1,12 @@
+.spinner {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+
 .post-container {
   margin: 20px auto;
   border: 1px solid #C0C0C0;
