--- a/src/app/main/components/user-post-edit/user-post-edit.component.html
+++ b/src/app/main/components/user-post-edit/user-post-edit.component.html
@@ -1,4 +1,6 @@
-<div class="post-container">
+<mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
+
+<div class="post-container" *ngIf="!spinner">
   <img class="post-image" src="{{postImage}}" alt="postImage">
   <label>
     <input [formControl]="inputPostDescription" value="{{postDescription}}">
