--- a/src/app/main/components/user-profile-edit/user-profile-edit.component.css
+++ b/src/app/main/components/user-profile-edit/user-profile-edit.component.css
@@ -1,3 +1,12 @@
+.spinner {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+
 .profile-edit-container {
   background-color: #ffff;
   margin: 20px auto;
