update post review and profile design

--- a/src/app/main/components/user-profile/user-profile.component.html
+++ b/src/app/main/components/user-profile/user-profile.component.html
@@ -4,7 +4,7 @@
   <div class="user-profile-info-container">
 
     <div class="user-info">
-      <img class="user-avatar" src="{{userAvatar}}" alt="postImage">
+      <img class="user-avatar" src="{{userAvatar}}" alt="userAvatar">
       <div class="info-container">
         <p class="user-username">{{username}}</p>
         <p class="user-bio">{{bio}}</p>
@@ -28,6 +28,7 @@
           <button mat-button (click)="openFollowing()">Following</button>
         </div>
       </div>
+
     </div>
   </div>
 
