--- a/src/app/main/components/feed/feed.component.html
+++ b/src/app/main/components/feed/feed.component.html
@@ -4,7 +4,7 @@
   <mat-card class="post-container" *ngFor="let post of posts">
     <mat-card-header class="post-owner-container">
       <img mat-card-avatar class="post-owner-avatar" [src]="post.user.image || 'assets/images/default-avatar.jpg'"
-           alt="postImage">
+           alt="userAvatar">
       <p class="post-owner" mat-card-title
          [routerLink]=" [ '/profile/', post.user.username ]">{{post.user.username}}</p>
     </mat-card-header>
