--- a/src/app/main/components/post-review/post-review.component.css
+++ b/src/app/main/components/post-review/post-review.component.css
@@ -14,34 +14,80 @@
   background-color: #ffff;
 }
 
-.post-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.post-info-container {
-  display: flex;
+.post-owner-container {
+  margin-bottom: 10px;
 }
 
 .post-owner {
   font-weight: bold;
+  margin-top: 7px;
+  cursor: pointer;
+}
+
+.likes-container {
+  padding: initial;
+  margin-bottom: initial;
+}
+
+.post-likes {
+  font-weight: bold;
+  margin-left: 8px;
+}
+
+.like-icon {
+  width: 30px;
+  height: 30px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.post-info-container {
+  display: flex;
+  font-size: initial;
+  margin: initial;
+}
+
+.post-owner {
+  font-weight: bold;
+  margin-top: 7px;
+  cursor: pointer;
 }
 
 .post-description {
   margin-left: 10px;
   text-align: center;
+  margin-bottom: initial;
+  margin-block-start: 0;
+}
+
+.load-more-comments-container {
+  display: flex;
+  justify-content: center;
+}
+
+.load-more-comments-icon {
+  align-self: center;
 }
 
 .post-comments {
+  display: flex;
+  justify-content: space-between;
+}
+
+.post-comments-info-container {
   display: flex;
 }
 
 .comment-owner {
   font-weight: bold;
+  cursor: pointer;
 }
 
 .comment-body {
   margin-left: 10px;
   text-align: center;
+}
+
+.delete-comment-icon {
+  margin-top: 5px;
 }
