--- a/src/app/main/components/post-review/post-review.component.html
+++ b/src/app/main/components/post-review/post-review.component.html
@@ -1,24 +1,54 @@
 <mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
 
 <div class="post-container" *ngIf="!spinner">
-  <p class="post-owner">{{postOwner}}</p>
-  <img class="post-image" src="{{postImage}}" alt="postImage">
-  <div class="post-info-container">
-    <p class="post-owner">{{postOwner}}</p>
-    <p class="post-description">{{postDescription}}</p>
-  </div>
-  <div>
-    <button>Like</button>
-  </div>
-  <button *ngIf="loadButton" (click)="getComments(postId, pageToLoad)">Load more</button>
-  <div class="post-comments" *ngFor="let comment of comments">
-    <p class="comment-owner">{{comment.user.username}}</p>
-    <p class="comment-body">{{comment.body}}</p>
-    <button *ngIf="comment.user.username === user" (click)="deleteComment(postId, comment.id, comment)">delete</button>
-  </div>
-  <form (ngSubmit)="addComment(postId)">
-    <label>
-      <input type="text" [formControl]="addCommentForm" placeholder="Add a comment">
-    </label>
-  </form>
+  <mat-card>
+    <mat-card-header class="post-owner-container">
+      <img mat-card-avatar class="post-owner-avatar" [src]="postUserImage || 'assets/images/default-avatar.jpg'" alt="userAvatar">
+      <p class="post-owner" mat-card-title
+         [routerLink]=" [ '/profile/', postOwner ]">{{postOwner}}</p>
+    </mat-card-header>
+
+    <img mat-card-image src="{{postImage}}" alt="postImage">
+
+    <mat-card-actions class="likes-container">
+      <img class="like-icon" src='../../../../assets/images/like-false.png' *ngIf="!postLiked"
+           (click)="likePost(likeResourceType, postId)" alt="like-false">
+      <img class="like-icon" src='../../../../assets/images/like-true.png' *ngIf="postLiked"
+           (click)="dislike(likeResourceType, postId)" alt="like-true">
+      <p class="post-likes">{{postLikedCount}} likes</p>
+    </mat-card-actions>
+
+    <mat-card-content class="post-info-container" *ngIf="postDescription">
+      <p class="post-owner">{{postOwner}}</p>
+      <p class="post-description">{{postDescription}}</p>
+    </mat-card-content>
+
+    <mat-divider style="position: initial"></mat-divider>
+
+    <div class="load-more-comments-container">
+    <button class="load-more-comments-icon" mat-icon-button *ngIf="loadButton" (click)="getComments(postId, pageToLoad)">
+      <mat-icon>add_circle_outline</mat-icon>
+    </button>
+    </div>
+
+    <div class="post-comments" *ngFor="let comment of comments">
+      <div class="post-comments-info-container">
+      <p class="comment-owner"
+         [routerLink]=" [ '/profile/', comment.user.username ]">{{comment.user.username}}</p>
+      <p class="comment-body">{{comment.body}}</p>
+      </div>
+      <button class="delete-comment-icon" mat-icon-button *ngIf="comment.user.username === user" (click)="deleteComment(postId, comment.id, comment)">
+        <mat-icon>clear</mat-icon>
+      </button>
+    </div>
+
+    <form (ngSubmit)="addComment(postId)">
+      <mat-form-field style="display: block">
+      <label>
+        <input matInput type="text" [formControl]="addCommentForm" placeholder="Add a comment">
+      </label>
+      </mat-form-field>
+    </form>
+
+  </mat-card>
 </div>
