--- a/src/app/main/components/profile/profile.component.css
+++ b/src/app/main/components/profile/profile.component.css
@@ -7,12 +7,81 @@
   margin: auto;
 }
 
+.profile-info-container {
+  display: flex;
+  margin: 20px auto;
+  justify-content: center;
+}
+
+.user-info {
+  display: flex;
+}
+
+.info-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  width: 100px;
+}
+
+.user-username {
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.user-bio {
+  font-size: 16px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .user-avatar {
   width: 100px;
   height: 100px;
   border-radius: 50%;
 }
 
-.post-image {
-  width: 300px;
+.subscribe-buttons-container {
+  margin-top: 15px;
 }
+
+.subscribe-container {
+  display: flex;
+  margin-top: 5px;
+}
+
+.subscribe-count {
+  font-weight: bold;
+}
+
+.post-container {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.post {
+  width: 300px;
+  height: 300px;
+  margin: 10px;
+  position: relative;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  cursor: pointer;
+}
+
+.post:hover {
+  opacity: 0.5;
+}
+
+.post-image {
+  width: 100%;
+  object-fit: cover;
+  align-self: center;
+}
+
