--- a/src/app/main/components/profile/profile.component.html
+++ b/src/app/main/components/profile/profile.component.html
@@ -1,30 +1,46 @@
 <mat-spinner class="spinner" *ngIf="spinner"></mat-spinner>
 
 <div class="profile-container" *ngIf="!spinner">
-  <img *ngIf="!errorMessage" class="user-avatar" src="{{userAvatar}}" alt="postImage">
-  <p>{{username}}</p>
-  <p>{{bio}}</p>
 
-  <div *ngIf="!errorMessage">
-    <button *ngIf="subscribeStatus" (click)="subscribe(userId)">Subscribe</button>
-    <button *ngIf="!subscribeStatus" (click)="unsubscribe(userId)">UnSubscribe</button>
-  </div>
+  <div class="profile-info-container">
+    <div class="user-info">
+      <img *ngIf="!errorMessage" class="user-avatar" src="{{userAvatar}}" alt="userAvatar">
+      <div class="info-container">
+        <p class="user-username">{{username}}</p>
+        <p class="user-bio">{{bio}}</p>
+      </div>
+    </div>
 
-  <div *ngIf="!errorMessage">
-    <button (click)="openFollowers()">Followers</button>
-    <button (click)="openFollowing()">Following</button>
-  </div>
+    <div *ngIf="!errorMessage">
+      <div class="subscribe-buttons-container">
+        <button mat-stroked-button *ngIf="subscribeStatus" (click)="subscribe(userId)">Subscribe</button>
+        <button mat-stroked-button *ngIf="!subscribeStatus" (click)="unsubscribe(userId)">UnSubscribe</button>
+      </div>
 
-  <div class="post-container" *ngFor="let post of posts">
-    <img class="post-image" src="{{post.image}}" alt="postImage"
-         [routerLink]=" [ '/post-review/', post.id ]">
-    <div class="post-info-container" *ngIf="post.body">
-      <p class="post-owner">{{post.user.username}}</p>
-      <p class="post-description">{{post.body}}</p>
-      <p class="post-likes">{{post.likes_count}} likes</p>
+      <div class="subscribe-container">
+        <div class="subscribe-container">
+          <p class="subscribe-count">{{followersCount}}</p>
+          <button mat-button (click)="openFollowers()">Followers</button>
+        </div>
+
+        <div class="subscribe-container">
+          <p class="subscribe-count">{{followingCount}}</p>
+          <button mat-button (click)="openFollowing()">Following</button>
+        </div>
+      </div>
     </div>
   </div>
+
   <p *ngIf="errorMessage">{{errorMessage.error}}</p>
+
+  <div class="post-container">
+    <div class="post"
+         [ngStyle]="{'background-image': 'url(' + post.image + ')'}"
+         [routerLink]="[ '/post-review/', post.id ]"
+         *ngFor="let post of posts">
+    </div>
+  </div>
+
   <div
     infiniteScroll
     [infiniteScrollDistance]="2"
